# repose-vala

./: .gitignore  README.md  me.blq.Repose.json  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: repose  repose-resources.c  repose-resources.h
builddir/src/repose.p/: main.c  window.c
builddir/src/repose.p/model/: request.c  root_state.c
builddir/src/repose.p/widgets/: main_window.c  request_editor.c
data/: me.blq.Repose.appdata.xml.in  me.blq.Repose.desktop.in  me.blq.Repose.gschema.xml  meson.build
echo_server/: server.py
po/: POTFILES  meson.build
src/: main.vala  meson.build  repose.gresource.xml
src/model/: base_tree_node.vala  collection_model.vala  folder_model.vala  param_row.vala  param_table_list_store.vala  request.vala  request_tree_node.vala  request_tree_store.vala  response.vala  root_state.vala
src/model/db/: request_row.vala
src/services/: http_client.vala  request_dao.vala
src/tests/: main.vala  meson.build  test_case.vala
src/tests/utils/: hex_dump_test.vala
src/ui/: #MainWindow.ui#  #RequestTree.ui#  #ResponseContainer.ui#  ActiveRequestTab.ui  Collection.ui  FolderDialog.ui  MainWindow.ui  MainWindow.ui~  ParamTable.ui  RequestContainer.ui  RequestContainer.ui~  RequestEditor.ui  RequestEditor.ui~  RequestList.ui  RequestTree.ui  ResponseContainer.ui  ResponseContainer.ui~  style.css
src/utils/: dirs.vala  editor_langs.vala  hex_dump.vala  humanize.vala
src/vapi/: libcurl.vapi  uchardet.vapi
src/widgets/: active_request_tab.vala  collection.vala  create_folder_dialog.vala  folder_dialog.vala  main_window.vala  param_table.vala  request_container.vala  request_editor.vala  request_tree.vala  response_container.vala  save_request_dialog.vala
